# agda-mcp

./: .gitignore  Cargo.toml  README.md  agda-mcp.cabal  flake.nix  fourmolu.yaml
app/: Main.hs
examples/: Hole.agda
src/: AgdaMCP.hs  agda.rs  agda_command.rs  edit.rs  lib.rs  main.rs  server.rs  tools.rs
src/AgdaMCP/: Commands.hs  Position.hs  ResponseProtocol.hs  Runtime.hs  Server.hs  Session.hs  SourceEdit.hs  Tools.hs  Types.hs  Worker.hs
src/AgdaMCP/Tools/: Common.hs  Give.hs  Goal.hs  Load.hs
src/agda/: command.rs  process.rs  response.rs  source.rs
src/tools/: give.rs  load.rs
test/: Main.hs
test/AgdaMCP/: PositionTest.hs
test/AgdaMCP/Tools/: GiveTest.hs  LoadTest.hs
test/end-to-end/: Main.hs
test/fixtures/: Constraints.agda  Context.agda  ContextAttributes.agda  CubicalBoundary.agda  Hole.agda  ImportedOpenHole.agda  ImportedWarning.agda  ImportsOpenHole.agda  ImportsWarning.agda  Lambda.agda  Literate.lagda.md  Normalize.agda  SafePostulate.agda  SortMeta.agda  ThreeHoles.agda  TwoHoles.agda  TypeError.agda  Unreachable.agda  UnsolvedMetas.agda
test/integration/: Common.hs  Give.hs  Goal.hs  Load.hs  Main.hs
test/unit/: Main.hs
test/unit/AgdaMCP/Tools/: GiveTest.hs  GoalTest.hs  LoadTest.hs
tests/: agda_available.rs  agda_process.rs  give_tool.rs  load_tool.rs
