cabal-version: 3.0
name: agda-mcp
version: 0.1.0.0
synopsis: MCP server for interactive Agda development
description:
  An MCP server that lets coding agents use Agda interactively.
category: Development
license: BSD-3-Clause
author: Jackson Brough
maintainer: jacksontbrough@gmail.com
build-type: Simple

library
  hs-source-dirs: src
  exposed-modules:
    AgdaMCP.Position
    AgdaMCP.Session
    AgdaMCP.Tools
    AgdaMCP.Tools.Common
    AgdaMCP.Tools.Give
    AgdaMCP.Tools.Load
    AgdaMCP.Server
  build-depends:
      Agda == 2.8.*,
      aeson,
      atomic-write,
      base >= 4.18 && < 5,
      bytestring,
      containers,
      mcp,
      mcp-types,
      mtl,
      stm,
      text
  default-language: GHC2021
  ghc-options:
      -Wall

executable agda-mcp
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
      agda-mcp,
      base >= 4.18 && < 5
  default-language: GHC2021
  ghc-options:
      -Wall
      -Wcompat
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-home-modules
      -Wpartial-fields
      -Wredundant-constraints

test-suite agda-mcp-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    AgdaMCP.Tools.GiveTest
    AgdaMCP.Tools.LoadTest
  build-depends:
      Agda == 2.8.*,
      agda-mcp,
      base >= 4.18 && < 5,
      tasty,
      tasty-hunit,
      text
  default-language: GHC2021
  ghc-options:
      -Wall
      -Wcompat
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-home-modules
      -Wpartial-fields
      -Wredundant-constraints
