cabal-version: 3.0
name: agda-mcp
version: 0.1.0.0
synopsis: MCP server for interactive Agda development
description:
  An MCP server that lets coding agents use Agda interactively.
category: Development
license: BSD-3-Clause
author: Jackson Brough
maintainer: jacksontbrough@gmail.com
build-type: Simple

library
  hs-source-dirs: src
  exposed-modules:
    AgdaMCP.Position
    AgdaMCP.Session
    AgdaMCP.Tools
    AgdaMCP.Tools.Common
    AgdaMCP.Tools.Give
    AgdaMCP.Tools.Goal
    AgdaMCP.Tools.Load
    AgdaMCP.Server
  build-depends:
      Agda == 2.8.*,
      aeson,
      atomic-write,
      base >= 4.18 && < 5,
      containers,
      mcp,
      mtl,
      stm,
      text
  default-language: GHC2021
  ghc-options:
      -Wall

executable agda-mcp
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
      agda-mcp,
      base >= 4.18 && < 5
  default-language: GHC2021
  ghc-options:
      -Wall
      -Wcompat
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-home-modules
      -Wpartial-fields
      -Wredundant-constraints

test-suite agda-mcp-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test/unit
  other-modules:
    AgdaMCP.PositionTest
    AgdaMCP.Tools.GiveTest
    AgdaMCP.Tools.GoalTest
    AgdaMCP.Tools.LoadTest
  build-depends:
      Agda == 2.8.*,
      aeson,
      agda-mcp,
      base >= 4.18 && < 5,
      containers,
      tasty,
      tasty-hunit,
      text
  default-language: GHC2021
  ghc-options:
      -Wall
      -Wcompat
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-home-modules
      -Wpartial-fields
      -Wredundant-constraints

test-suite agda-mcp-integration
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test/integration
  other-modules:
    Common
    Give
    Goal
    Load
  build-depends:
      Agda == 2.8.*,
      agda-mcp,
      base >= 4.18 && < 5,
      bytestring,
      directory,
      filepath,
      mtl,
      tasty,
      tasty-hunit,
      temporary,
      text
  default-language: GHC2021
  ghc-options:
      -Wall
      -Wcompat
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-home-modules
      -Wpartial-fields
      -Wredundant-constraints

test-suite agda-mcp-end-to-end
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test/end-to-end
  build-tool-depends: agda-mcp:agda-mcp
  build-depends:
      aeson,
      base >= 4.18 && < 5,
      bytestring,
      containers,
      directory,
      filepath,
      jsonrpc,
      mcp-types,
      process,
      tasty,
      tasty-hunit,
      temporary,
      text,
      transformers
  default-language: GHC2021
  ghc-options:
      -threaded
      -Wall
      -Wcompat
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-home-modules
      -Wpartial-fields
      -Wredundant-constraints
